oops forgor one

--- a/Resources/Prototypes/GameRules/unknown_shuttles.yml
+++ b/Resources/Prototypes/GameRules/unknown_shuttles.yml
@@ -35,6 +35,7 @@
     children:
     - id: LoneOpsSpawn
     - id: UnknownShuttleDrone
+    - id: UnknownShuttleInstigator
     - id: UnknownShuttleManOWar
     - id: UnknownShuttleRaider
     - id: UnknownShuttleScooner
