Vending machine tweaks to add variety and make the MNGR wires actually do things on more than just security vends and the youtool

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/cigs.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/cigs.yml
@@ -15,6 +15,7 @@
     CheapLighter: 4
     Lighter: 2
     FlippoLighter: 2
+  contrabandInventory:
+    StackOfCigs: 1
   emaggedInventory:
     CigPackSyndicate: 1
-    StackOfCigs: 1
