--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/gib.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/gib.yml
@@ -8,6 +8,14 @@
     DrinkSolDryCan: 2
     DrinkLemonLimeCan: 2
     DrinkFourteenLokoCan: 2
+    DrinkOrangeAsteradeBottleFull: 2
+    DrinkPurpleAsteradeBottleFull: 2
+    DrinkRedAsteradeBottleFull: 2
+    DrinkGreenAsteradeBottleFull: 2
+    DrinkYellowAsteradeBottleFull: 2
+    DrinkLemonAsteradeBottleFull: 2
+  contrabandInventory:
+    DrinkBrownAsteradeBottleFull: 2
   emaggedInventory:
     DrinkNukieCan: 2
     DrinkChangelingStingCan: 2
