--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/soda.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/soda.yml
@@ -14,7 +14,8 @@
     DrinkGreenAsteradeBottleFull: 2
     DrinkYellowAsteradeBottleFull: 2
     DrinkLemonAsteradeBottleFull: 2
+  contrabandInventory:
+    DrinkBrownAsteradeBottleFull: 2
   emaggedInventory:
     DrinkNukieCan: 3
     DrinkChangelingStingCan: 3
-    DrinkBrownAsteradeBottleFull: 2
