AI is properly connected to the power network.

--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -217,6 +217,7 @@
         acts: [ "Destruction" ]
   - type: ApcPowerReceiver
     powerLoad: 1000
+  - type: ExtensionCableReceiver
   - type: StationAiCore
   - type: StationAiVision
   - type: InteractionOutline
