--- a/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
@@ -17,6 +17,8 @@
     - id: RadioHandheld
     - id: AppraisalTool
     - id: FireExtinguisher
+    - id: JetpackMini
+      prob: 0.5
     - id: Flare
       prob: 0.3
       rolls: !type:ConstantNumberSelector
