--- a/Resources/Prototypes/Maps/reach.yml
+++ b/Resources/Prototypes/Maps/reach.yml
@@ -21,6 +21,7 @@
             HeadOfSecurity: [ 1, 1 ]
             SecurityOfficer: [ 1, 3 ]
             CargoTechnician: [ 1, 2 ]
+            SalvageSpecialist: [ 1, 1 ]
             Bartender: [ 1, 1 ]
             Botanist: [ 1, 1 ]
             Chef: [ 1, 1 ]
