Revert "can't migrate tiles... buh"
This reverts commit 36b0073a61f9fc1ef9bf740f100495de3fa5b633.

--- a/Resources/Maps/Dungeon/snowy_labs.yml
+++ b/Resources/Maps/Dungeon/snowy_labs.yml
@@ -23,7 +23,7 @@ tilemap:
   80: FloorShowroom
   84: FloorShuttleOrange
   89: FloorSnow
-  90: FloorSnowGrave
+  90: FloorSnowDug
   91: FloorSteel
   96: FloorSteelDiagonal
   101: FloorSteelMini
