okay so that exists I guess! cool.

--- a/Resources/Prototypes/Tiles/tile_migrations.yml
+++ b/Resources/Prototypes/Tiles/tile_migrations.yml
@@ -56,3 +56,8 @@
 - type: tileAlias
   id: FloorRGlassAlt
   target: FloorRGlass
+
+# 2024-09-01
+- type: tileAlias
+  id: FloorSnowDug
+  target: FloorSnowGrave
