--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -1,4 +1,4 @@
-﻿defaultWindowTitle: spess man simulator 14
+﻿defaultWindowTitle: Spessmen Simulator 14
 windowIconSet: /Textures/Logo/icon
 splashLogo: /Textures/Logo/logo.png
 
