--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -1517,7 +1517,7 @@
   - type: FoodSequenceElement
     sprite:
       sprite: Objects/Consumable/Food/meat.rsi
-      state: snail
+      state: snail-cooked
     entries:
       burger:
         name: food-sequence-content-snail
