Basically every electronic device can now be used by the AI.

--- a/Resources/Prototypes/Entities/Structures/Dispensers/chem.yml
+++ b/Resources/Prototypes/Entities/Structures/Dispensers/chem.yml
@@ -5,6 +5,7 @@
   parent: ReagentDispenserBase
   description: An industrial grade chemical dispenser.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     sprite: Structures/dispensers.rsi
     state: industrial-working
