--- a/Resources/Prototypes/Entities/Structures/Dispensers/soda.yml
+++ b/Resources/Prototypes/Entities/Structures/Dispensers/soda.yml
@@ -5,6 +5,7 @@
   description: A beverage dispenser with a selection of soda and several other common beverages. Has a single fill slot for containers.
   suffix: Filled
   components:
+  - type: StationAiWhitelist
   - type: Rotatable
   - type: Sprite
     sprite: Structures/smalldispensers.rsi
