--- a/Resources/Prototypes/Entities/Structures/Machines/Medical/chemistry_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Medical/chemistry_machines.yml
@@ -43,6 +43,7 @@
   name: electrolysis unit
   description: The latest in medicinal electrocution technology.
   components:
+  - type: StationAiWhitelist
   - type: SolutionContainerMixer
     mixDuration: 5
     mixingSound:
