--- a/Resources/Prototypes/Entities/Structures/Machines/flatpacker.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/flatpacker.yml
@@ -4,6 +4,7 @@
   name: Flatpacker 1001
   description: An industrial machine used for expediting machine construction across the station.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     sprite: Structures/Machines/flatpacker.rsi
     snapCardinals: true
