--- a/Resources/Prototypes/Entities/Structures/Dispensers/booze.yml
+++ b/Resources/Prototypes/Entities/Structures/Dispensers/booze.yml
@@ -5,6 +5,7 @@
   description: A booze dispenser with a single slot for a container to be filled.
   parent: ReagentDispenserBase
   components:
+  - type: StationAiWhitelist
   - type: Rotatable
   - type: Sprite
     sprite: Structures/smalldispensers.rsi
