--- a/Resources/Prototypes/Entities/Structures/Machines/fax_machine.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/fax_machine.yml
@@ -4,6 +4,7 @@
   name: long range fax machine
   description: Bluespace technologies on the application of bureaucracy.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     sprite: Structures/Machines/fax_machine.rsi
     drawdepth: SmallObjects
@@ -107,6 +108,7 @@
   name: captain long range fax machine
   suffix: NukeCodes
   components:
+    - type: StationAiWhitelist
     - type: FaxMachine
       name: "Captain's Office"
       receiveNukeCodes: true
