--- a/Resources/Prototypes/Entities/Structures/Machines/jukebox.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/jukebox.yml
@@ -4,6 +4,7 @@
   parent: [ BaseMachinePowered, ConstructibleMachine ]
   description: A machine capable of playing a wide variety of tunes. Enjoyment not guaranteed.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     sprite: Structures/Machines/jukebox.rsi
     layers:
