--- a/Resources/Prototypes/Entities/Structures/Shuttles/station_anchor.yml
+++ b/Resources/Prototypes/Entities/Structures/Shuttles/station_anchor.yml
@@ -59,6 +59,7 @@
   placement:
     mode: AlignTileAny
   components:
+    - type: StationAiWhitelist
     - type: PowerCharge
       windowTitle: station-anchor-window-title
       idlePower: 50
