--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -143,18 +143,6 @@
     laws: Crewsimov
 
 - type: entity
-  id: StationAICircuitBoard
-  parent: BaseElectronics
-  name: circuit board (Station AI)
-  description: An electronics board containing the AI lawset.
-  components:
-  - type: Sprite
-    sprite: Objects/Misc/module.rsi
-    state: std_mod
-  - type: SiliconLawProvider
-    laws: sAIDefault
-
-- type: entity
   id: CorporateCircuitBoard
   parent: BaseElectronics
   name: circuit board (Corporate)
@@ -276,7 +264,7 @@
   - type: BlockMovement
     blockInteraction: false
   - type: SiliconLawProvider
-    laws: sAIDefault
+    laws: NTDefault
   - type: SiliconLawBound
   - type: ActionGrant
     actions:
