--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -396,3 +396,20 @@
         conditions:
         - !type:ReagentThreshold
           min: 50
+
+- type: reagent
+  id: PropulsionGel
+  name: reagent-name-propulsion-gel
+  group: Special
+  desc: reagent-physical-desc-energetic
+  flavor: speed
+  color: "#ff8700"
+  metabolisms:
+    Drink:
+      effects:
+      - !type:SatiateThirst
+        factor: 2
+      - !type:GenericStatusEffect
+        key: Drowsiness
+        time: 2.0
+        type: Remove
