made propulsion gel recognizable and gave it a viscosity of -1.

--- a/Resources/Prototypes/Reagents/fun.yml
+++ b/Resources/Prototypes/Reagents/fun.yml
@@ -405,6 +405,8 @@
   physicalDesc: reagent-physical-desc-energetic
   flavor: speed
   color: "#ff8700"
+  recognizable: true
+  viscosity: -1
   metabolisms:
     Drink:
       effects:
