fix recipe for propulsion gel

--- a/Resources/Prototypes/Recipes/Reactions/fun.yml
+++ b/Resources/Prototypes/Recipes/Reactions/fun.yml
@@ -100,9 +100,12 @@
   id: PropulsionGel
   minTemp: 370
   reactants: 
-    Mucin: 1
-    SpaceLube: 2
-    Tricordrazine: 2
+    Mucin: 
+      amount: 1
+    SpaceLube: 
+      amount: 2
+    Tricordrazine: 
+      amount: 2
   products:
     PropulsionGel: 5
 
