--- a/Resources/Prototypes/Catalog/Fills/Paper/manuals.yml
+++ b/Resources/Prototypes/Catalog/Fills/Paper/manuals.yml
@@ -23,3 +23,12 @@
         type: PaperBoundUserInterface
   - type: Paper
     content: book-text-holoparasite-info
+
+- type: entity
+  id: PaperAgrichemManual
+  name: "AgriChem Is Fun! Manual"
+  description: The single sheet of instructions that came in the kit. 
+  parent: Paper
+  components:
+  - type: Paper
+    content: book-text-agrichemkit-manual
