--- a/Resources/Prototypes/Recipes/Reactions/medicine.yml
+++ b/Resources/Prototypes/Recipes/Reactions/medicine.yml
@@ -351,8 +351,8 @@
   reactants:
     TableSalt:
       amount: 1
-    Blood:
-      amount: 1
+    JuiceCarrot:
+      amount: 2
     Hydroxide:
       amount: 2
   products:
