Re-added the golden autism pin I accidentally blew away when messing with server pins

--- a/Resources/Prototypes/Loadouts/Miscellaneous/trinkets.yml
+++ b/Resources/Prototypes/Loadouts/Miscellaneous/trinkets.yml
@@ -88,7 +88,7 @@
   storage:
     back:
     - ClothingNeckAsexualPin
-  
+
 - type: loadout
   id: ClothingNeckBisexualPin
   storage:
@@ -131,3 +131,8 @@
     back:
     - ClothingNeckAutismPin
 
+- type: loadout
+  id: ClothingNeckGoldAutismPin
+  storage:
+    back:
+    - ClothingNeckGoldAutismPin
