--- a/Resources/Prototypes/Entities/Objects/Tools/jetpacks.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/jetpacks.yml
@@ -217,6 +217,46 @@
         - 0.307706858 # oxygen
         - 0.307706858 # nitrogen
 
+#Empty salvage
+- type: entity
+  id: JetpackSalvage
+  parent: BaseJetpack
+  name: salvage jetpack
+  description: It's a busted up jetpack. It doesn't hold much gas.
+  suffix: Empty
+  components:
+    - type: Item
+      sprite: Objects/Tanks/Jetpacks/salvage.rsi
+    - type: Sprite
+      sprite: Objects/Tanks/Jetpacks/salvage.rsi
+    - type: Clothing
+      sprite: Objects/Tanks/Jetpacks/salvage.rsi
+      slots:
+        - Back
+        - suitStorage
+        - Belt
+    - type: GasTank
+      outputPressure: 42.6
+      air:
+        volume: .2
+
+# Filled salvage
+- type: entity
+  id: JetpackSalvageFilled
+  parent: JetpackSalvage
+  name: salvage jetpack
+  suffix: Filled
+  components:
+  - type: GasTank
+    outputPressure: 42.6
+    air:
+      # 30 seconds of thrust
+      volume: .2
+      temperature: 293.15
+      moles:
+        - 0.041027581 # oxygen
+        - 0.041027581 # nitrogen
+
 #Empty security
 - type: entity
   id: JetpackSecurity
