--- a/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
@@ -16,13 +16,18 @@
     - id: HandheldGPSBasic
     - id: RadioHandheld
     - id: AppraisalTool
-    - id: FireExtinguisher
-    - id: JetpackMini
-      prob: 0.5
     - id: Flare
       prob: 0.3
       rolls: !type:ConstantNumberSelector
         value: 3
+    - !type:GroupSelector # Random jetpack
+      children:
+      - id: JetpackSalvage
+        weight: 80
+      - id: FireExtinguisher
+        weight: 18
+      - id: JetpackMini
+        weight: 2
 
 - type: entity
   id: LockerSalvageSpecialistFilledHardsuit
